--- a/index.html
+++ b/index.html
@@ -5,10 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Book App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+  <script id="book-list-template" type="text/x-handlebars-template">
+    <header>
+      <img src="{{image_url}}">
+      <h1>{{title}}</h1>
+      <h2>{{author}}</h2>
+      
+    </header>
+  
+  
+  </script>
 </head>
 
 <body>
-  <h1>Welcome to our Book App</h1>
+  <main>
+    <section id="book-list" class="book-view">
+      <ul></ul>
+    </section>
+    <section id="about" class="container"></section>
+   </main>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+   <script src="scripts/models/book.js"></script>
+   <script src="scripts/views/book-view.js"></script>
+   <script src="scripts/views/error-view.js"></script>
 </body>
 </html>
