add nav and fix route to 'add book'

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 </head>
 
 <body>
+  <header>
+    <nav class="main-nav">
+      <div class="icon-menu"></div>
+      <ul>
+        <a href="/">Home</a>
+        <a href="/add">Add a Book</a>
+      </ul>
+    </nav>
+  </header>
   <main>
     <section id="book-list" class="book-view">
       <ul></ul>
